# dotfiles

./: .chezmoi.yaml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .copier-config.yaml  .copierignore  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .tasks.toml  .todo.md  404.html  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Makefile  README.md  Taskfile.dist.yaml  Taskfile.yaml  chezmoi.code-workspace  dot_gitconfig.tmpl  dot_zshrc  dot_zshrc.tmpl  index.html  install  install-apt-pkgs  install-apt-prerequisites  install-go  install-yq  mkdocs.yaml  pyproject.toml  run_once_install-packages.sh  run_once_install-packages.sh.tmpl  run_once_setup.sh.tmpl  sitemap.xml
.links/: chezmoi  rootmoi  ssh
.local/: chezmoi  dotdrop  rootmoi
api/: index.html
bootstrap/: index.html
chezmoi/: .chezmoi.yaml.tmpl  .chezmoidata.yaml  .chezmoidata.yaml.tmpl  .chezmoiexternal.yaml  .chezmoiexternal.yaml.tmpl  .chezmoiignore  Taskfile.dist.yaml  Taskfile.dist.yaml.tmpl  dot_aliases.zsh.tmpl  dot_bash_aliases.tmpl  dot_bash_profile  dot_bashrc  dot_gitconfig.tmpl  dot_mackup.cfg.tmpl  dot_profile  dot_profile.tmpl  dot_tmux.conf.tmpl  dot_zshrc.tmpl  modify_dot_wakatime.cfg
docs/: CNAME  bootstrap.md  configuration.md  dotfiles-install-apt-pkgs  dotfiles-install-apt-prerequisites  features.md  index.html  index.md  install  install-apt-pkgs  install-apt-prerequisites  install-autorestic  install-dotfiles  install-go  packages.csv  packages.md  references.md  requirements.txt  usage.md
dotdrop/: config-root.yaml  config-user.yaml
(+210 files in other folders)
